# linux-package-visualizer

./: README.md  docker-compose.yaml  pyproject.toml
app/: config.py  main.py
app/model/: package.py
app/tests/: example_data.txt
backend/: Dockerfile
backend/app/: main.py
backend/app/model/: package.py
backend/app/tests/: conftest.py
backend/app/tests/model/: test_package.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: _respond.js  app.html
frontend/src/lib/: DependencyGrid.svelte  Package.svelte  PackageMetadata.svelte  SideBar.svelte  api.js  config.js  package.ts
frontend/src/routes/: +layout.server.js  +layout.svelte  +page.svelte
frontend/src/routes/package/[slug]/: +page.server.js  +page.svelte
