[tool.poetry]
name = "linux-package-visualizer"
version = "0.1.0"
description = "Application for visualizing and navigating package tree on a linux machine"
authors = ["Rami <rami.awar.ra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.2"
fastapi = "^0.80.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"